# recommendations-pa-base

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pa_base/: util.py
pa_base/configuration/: __init__.py  config.py  dynamic_configs.py  util.py
pa_base/data/: dataframes.py  s3_util.py
pa_base/datastructures/: params.py  results.py  trie.py
pa_base/logging/: __init__.py  json_formatter.py
pa_base/models/: base_model.py  pinecone_base_model.py  redis_models.py  util.py
pa_base/preprocess/: data_preparation.py
pa_base/train/: __init__.py  cloud_watch_metrics.py  model_evaluation.py  user_segmentation.py
pa_base/zdf/: __init__.py  util.py
pa_base/zdf/configuration/: __init__.py  config.py  dynamic_configs.py
pa_base/zdf/data/: __init__.py  dataframes.py
pa_base/zdf/datastructures/: __init__.py  params.py
pa_base/zdf/models/: __init__.py  redis_models.py  util.py
pa_base/zdf/preprocess/: __init__.py  data_preparation.py
pa_base/zdf/train/: user_segmentation.py
tests/: conftest.py  test_evaluation_metrics.py  test_setup.py  test_util.py  utils.py
tests/data/: test_dataframes.py
tests/models/: test_base_model.py  test_redis_models.py  test_util.py
tests/zdf/: test_dataframes.py  test_redis_models.py
